# qt5TestingGround

./: .gitignore  CMakeLists.txt  build.sh  libConfig.h.in  main.cpp
libcollatz/: CMakeLists.txt  Makefile  cmake_install.cmake  libcollatz.cpp  libcollatz.h
